fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -39,5 +39,5 @@ header {
 }
 
 .MuiFormControl-fullWidth {
-  padding-right: 5vw;
+  margin-right: 5vw;
 }
